--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 	<div id="pdfViewer"></div>
+	<style>
+		#pdfViewer {
+			display: block;
+			width: 70%;
+			height: 70%;
+			margin: 50px auto;
+		}
+	</style>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.7/pdfobject.min.js"></script>
 	<script>
 		PDFObject.embed("https://www.antennahouse.com/hubfs/xsl-fo-sample/pdf/basic-link-1.pdf", "#pdfViewer");
