--- a/index.html
+++ b/index.html
@@ -5,19 +5,8 @@
 	<title>Title</title>
 </head>
 <body>
-	<div id="pdfViewer"></div>
-	<style>
-		#pdfViewer {
-			display: block;
-			width: 70%;
-			height: 500px;
-			margin: 50px auto;
-		}
-	</style>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.7/pdfobject.min.js"></script>
-	<script>
-		PDFObject.embed("https://www.antennahouse.com/hubfs/xsl-fo-sample/pdf/basic-link-1.pdf", "#pdfViewer");
-	</script>
+<iframe src="https://docs.google.com/gview?url=http://infolab.stanford.edu/pub/papers/google.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
+
 
 </body>
 </html>
