--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>Title</title>
 </head>
 <body>
-<iframe src="https://docs.google.com/gview?url=http://infolab.stanford.edu/pub/papers/google.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
+
+	<iframe src="https://docs.google.com/gview?url=https://www.antennahouse.com/hubfs/xsl-fo-sample/pdf/basic-link-1.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
 
 
 </body>
